# paradox-typed-db

./: Cargo.toml  build.rs  spec.json
.github/workflows/: lint.yml  package.yml  release.yml  rustdoc.yml
examples/: check.rs
src/: ext.rs  lib.rs  typed_ext.rs  typed_rows.rs  typed_tables.rs
