[package]
name = "paradox-typed-db"
version = "0.1.0"
edition = "2018"

[dependencies.assembly-core]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "258fc31e2c50713912f54717871f2915617b7db4"

[dependencies.assembly-fdb]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "258fc31e2c50713912f54717871f2915617b7db4"
default-features = false
features = ["serde-derives"]

[dependencies.serde]
version = "1"
features = ["derive"]

[build-dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
quote = "1"
proc-macro2 = "1"
heck = "0.3.3"
