[package]
name = "paradox-typed-db"
version = "0.1.0"
edition = "2018"
license = "MIT or Apache-2.0"
description = "Typed Bindings for CDClient.fdb"
repository = "https://github.com/LUDevNet/paradox-typed-db"
documentation = "https://lu-dev.net/paradox-typed-db/paradox_typed_db"

[dependencies]
latin1str = "0.1.1"

[dependencies.assembly-core]
version = "0.3.1"

[dependencies.assembly-fdb]
version = "0.1.0"
default-features = false
features = ["serde-derives"]

[dependencies.serde]
version = "1"
features = ["derive"]

[build-dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
quote = "1"
proc-macro2 = "1"
heck = "0.3.3"
